src/styles/header.scss
header {
    @include flex(row);
    align-items: center;
    justify-content: space-between;

    background-color: #20212C;
    
    position : fixed;
    padding  : 0 21px 0 24px;
    width    : 100%;
    height   : 68px;

    @include desktop {
        background-color: transparent;

        position : static;
        padding  : 0;
        height   : 165px;
    }
}


.header__logo {
    height: 20px;

    @include desktop {
        height: 27px;
    }
}


.header__cont {
    @include flex(row);
    justify-content: center;
    flex-grow: 1;

    @include mobile {
        display: none;
    }
}


.header__nav {
    @include flex(row);
    gap: 55px;
}

.header__nav__link {
    font-family: 'Fira-Sans-Condensed';
    color: white
}

.header__menu-btn {
    @include full-size-img('/icons/menuOpen.svg');
    
    background-color: transparent;

    width  : 32px;
    height : 32px;
    border : none;

    @include desktop {
        display: none;
    }
}

